--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+*.png
+*.mp4
+
 # C extensions
 *.so
 
-# Distribution / packaging
+# Distribution / packaging+
 .Python
 build/
 develop-eggs/
